Fix responsive layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
     --primary: #FF1053;
     --secondary: #f2f4f3;
     --terciary: #222;
-    --spacing: 4rem;
+    --spacing: 2.5rem;
     color: #222;
   }
 
@@ -125,7 +125,7 @@
   .about-container {
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
+    align-items:center;
     margin-right: auto;
     max-width: 960px;
     margin: 0 auto;
@@ -151,8 +151,8 @@
   }
 
   p {
-    font-size: 3vw;
-    margin-bottom: 2vw;
+    font-size: 4vw;
+    margin-bottom: 2rem;
     line-height: 1.8em;
   }
 
@@ -168,16 +168,16 @@
   .about-text {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: flex-start;
   }
 
   blockquote {
     margin-top: var(--spacing);
-    padding: 0 10vw;
-    font-size: 3vw;
+    font-size: 5vw;
     font-style: italic;
-    text-align: center;
-    line-height: 5vw;
+    font-weight: 200;
+    text-align: left;
+    line-height: 7vw;
   }
 
   blockquote::selection {
@@ -203,18 +203,25 @@
 
   article {
     display: grid;
-    border: 1px solid #CCC;
-    border-radius: 1rem;
-    box-shadow: -3px 5px 6px 2px rgba(0, 0 , 0, 0.02);
+    border: .8px solid #CCC;
+    border-radius: .5rem;
+    border: 2px solid var(--button-border-color);
+  }
+
+  article:hover {
+    transition-property: all;
+    transition-duration: 300ms;
+    border-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 4px 20px 20px rgba(0, 0, 0, 0.02);
   }
 
   article p {
-    font-size: .7rem;
-    padding: 0 2rem 1rem 2rem;
+    font-size: 1rem;
+    padding: 2rem 2rem 1rem 2rem;
   }
 
   article h3 {
-    text-align: center;
+    text-align: left;
     padding: 2rem 2rem 0 2rem;
   }
 
@@ -224,20 +231,23 @@
     width: 100%;
     height: auto;
     max-width: none;
-    margin-bottom: 1rem;
-  }
+    }
 
   .article-buttons {
     display: grid;
+    justify-content: flex-start;
     padding: 0 2rem 2rem 2rem;
     grid-gap: 2vw;
   }
 
   article .button {
-    font-size: .8rem;
+    text-align:left;
+    font-size: 18px;
     line-height: 1.2rem;
-    width: fit-content;
     height: auto;
+    border: none;
+    padding: 0;
+    text-decoration: underline;
   }
 
   .contact {
@@ -311,7 +321,7 @@
     border-right: 100vw solid transparent;
   }
 
-  @media (min-width: 860px) {
+  @media (min-width: 768px) {
     h1 {
       font-size: 4vw;
     }
@@ -337,18 +347,15 @@
       flex-direction: row;
     }
 
-    .about-img {
-      filter: grayscale(100%);
-      transform-origin: center;
-      transform: rotate(0);
-    }
-
     img {
       height: auto;
       max-width: 15vw;
     }
 
     .about-img {
+      filter: grayscale(100%);
+      transform-origin: center;
+      transform: rotate(0);
       margin-bottom: 2vw;
       display: block;
       border-radius: 1vw;
@@ -369,9 +376,9 @@
     .about-text {
       display: flex;
       flex-direction: column;
-      align-items: left;
-      justify-content: space-between;
+      align-items: flex-start;
       margin-left: var(--spacing);
+      height: 100%;
     }
 
     p {
@@ -382,7 +389,6 @@
 
     blockquote {
       margin-top: var(--spacing);
-      padding: 0 10vw;
       font-size: 1.5vw;
       font-style: italic;
       text-align: center;
@@ -391,7 +397,7 @@
 
     .container-cards {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       column-gap: 2rem;
     }
 
@@ -424,5 +430,13 @@
 
     .copy {
       text-align: center;
+    }
+  }
+
+  @media (min-width: 1080px) {
+    .container-cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 2rem;
     }
   }
